--- a/index.html
+++ b/index.html
@@ -71,13 +71,15 @@
                                     </tr>
                                 </thead>
                                 <tbody class="divide-y divide-slate-100">
-                                    <tr><td class="px-4 py-2 font-semibold">Ajuste sin parte</td><td class="text-center">$22,000</td><td class="text-center">$29,000</td><td class="text-center">$32,000</td><td class="text-center">$10,000</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">Cambio de producto</td><td class="text-center">$20,000</td><td class="text-center">$25,000</td><td class="text-center">$30,000</td><td class="text-center">$10,000</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">Cambio de partes</td><td class="text-center">$22,000</td><td class="text-center">$29,000</td><td class="text-center">$32,000</td><td class="text-center">$10,000</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">No Falla</td><td class="text-center">$17,000</td><td class="text-center">$17,000</td><td class="text-center">$17,000</td><td class="text-center">$10,000</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">Cambio de Display</td><td class="text-center">$35,000</td><td class="text-center">$50,000</td><td class="text-center">$60,000</td><td class="text-center">-</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">Diagnóstico Display</td><td class="text-center">$19,000</td><td class="text-center">$25,000</td><td class="text-center">$30,000</td><td class="text-center">-</td></tr>
-                                    <tr><td class="px-4 py-2 font-semibold">Actualización Software</td><td class="text-center">$20,000</td><td class="text-center">$20,000</td><td class="text-center">$20,000</td><td class="text-center">-</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Ajuste sin parte</td><td class="text-center">$22,000</td><td class="text-center">$29,000</td><td class="text-center">$32,000</td><td class="text-center">$10,000</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Cambio de producto</td><td class="text-center">$20,000</td><td class="text-center">$25,000</td><td class="text-center">$30,000</td><td class="text-center">$10,000</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Cambio de partes</td><td class="text-center">$22,000</td><td class="text-center">$29,000</td><td class="text-center">$32,000</td><td class="text-center">$10,000</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">No Falla</td><td class="text-center">$17,000</td><td class="text-center">$17,000</td><td class="text-center">$17,000</td><td class="text-center">$10,000</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Cambio de Display</td><td class="text-center">$35,000</td><td class="text-center">$50,000</td><td class="text-center">$60,000</td><td class="text-center">-</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Diagnóstico Display</td><td class="text-center">$19,000</td><td class="text-center">$25,000</td><td class="text-center">$30,000</td><td class="text-center">-</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Actualización Software</td><td class="text-center">$20,000</td><td class="text-center">$20,000</td><td class="text-center">$20,000</td><td class="text-center">-</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Reingreso de otro tecnico 1 visita</td><td class="px-4 py-2 text-center">$30,000</td></tr>
+	                               <tr><td class="px-4 py-2 font-semibold text-center">Reingreso de otro tecnico 2 visitas</td><td class="px-4 py-2 text-center">$70,000</td></tr>
                                 </tbody>
                             </table>
                         </div>
@@ -96,6 +98,8 @@
                                     <tr><td class="px-4 py-2 font-semibold text-center">No Falla</td><td class="px-4 py-2 text-center">$17,000</td></tr>
                                     <tr><td class="px-4 py-2 font-semibold text-center">Lavado 2 horas</td><td class="px-4 py-2 text-center">$30,000</td></tr>
                                     <tr><td class="px-4 py-2 font-semibold text-center">Tina y Araña</td><td class="px-4 py-2 text-center">$35,000</td></tr>
+                                    <tr><td class="px-4 py-2 font-semibold text-center">Reingreso de otro tecnico 1 visita</td><td class="px-4 py-2 text-center">$30,000</td></tr>
+	                               <tr><td class="px-4 py-2 font-semibold text-center">Reingreso de otro tecnico 2 visitas</td><td class="px-4 py-2 text-center">$80,000</td></tr>
                                 </tbody>
                             </table>
                         </div>
