--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700;800&display=swap');
         body { font-family: 'Inter', sans-serif; }
-        .bg-brand { background-color: #a50034; }
+        .bg-brand { background-color: #60a5fa; }
         .text-brand { color: #a50034; }
         .tab-active { border-bottom: 4px solid #a50034; color: #a50034; font-weight: 800; }
         .table-container { overflow-x: auto; border-radius: 12px; }
-        .table-header { background-color: #1e293b; color: white; text-transform: uppercase; font-size: 0.75rem; letter-spacing: 0.05em; }
+        .table-header { background-color: #3b82f6; color: white; text-transform: uppercase; font-size: 0.75rem; letter-spacing: 0.05em; }
     </style>
 </head>
 <body class="bg-slate-50 text-slate-1000 antialiased pb-20">
