--- a/index.html
+++ b/index.html
@@ -177,7 +177,11 @@
                             <li class="flex items-center">✅ Dinero reportado a Electro Service En efectivo o en tranferencia a la llave que se les indique.</li>
                         </ul>
                         <div class="bg-slate-50 p-4 rounded-xl">
-                            <p class="text-[9px] font-bold text-slate-800 uppercase tracking-widest mb-1">Ejemplo MO $220.000</p>
+                            <p class="text-[9px] font-bold text-slate-800 uppercase tracking-widest mb-1">Ejemplo 1 Diagnostico $80.000</p>
+                            <p class="text-2xl font-black text-green-800 tracking-tighter">Ganas: $30.252 </p>
+                        </div>
+						<div class="bg-slate-50 p-4 rounded-xl">
+                            <p class="text-[9px] font-bold text-slate-800 uppercase tracking-widest mb-1">Ejemplo 2 MO $220.000</p>
                             <p class="text-2xl font-black text-green-800 tracking-tighter">Ganas: $83.193 </p>
                         </div>
                     </div>
@@ -188,7 +192,11 @@
                             Si el diagnóstico o las evidencias se reportan fuera del domicilio o después del tiempo estipulado. 
                         </p>
                         <div class="bg-white p-4 rounded-xl border border-slate-900">
-                            <p class="text-[9px] font-bold text-red-600 uppercase tracking-widest mb-1">Ejemplo MO $220.000</p>
+                            <p class="text-[9px] font-bold text-red-600 uppercase tracking-widest mb-1">Ejemplo 1 Diagnostico $80.000</p>
+                            <p class="text-2xl font-black text-red-600 tracking-tighter">Ganas: $20.168 </p>
+                        </div>
+						<div class="bg-white p-4 rounded-xl border border-slate-900">
+                            <p class="text-[9px] font-bold text-red-600 uppercase tracking-widest mb-1">Ejemplo 2 MO $220.000</p>
                             <p class="text-2xl font-black text-red-600 tracking-tighter">Ganas: $55.462 </p>
                         </div>
                     </div>
@@ -218,3 +226,4 @@
     </script>
 </body>
 </html>
+
