--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                             <li class="flex items-center">✅ Cotización en sitio explicada al cliente. </li>
                             <li class="flex items-center">✅ Fotos y reporte inmediato en SAMM. </li>
                             <li class="flex items-center">✅ Reporte vía chat en tiempo real. </li>
-                            <li class="flex items-center">✅ Dinero reportado a Electro Service En efectivo o en tranferencia a la llave que se les indique.</li>
+                            <li class="flex items-center">✅ Dinero reportado a Electro Service En efectivo o en tranferencia a la llave @PLATA3160275004.</li>
                         </ul>
                         <div class="bg-slate-50 p-4 rounded-xl">
                             <p class="text-[9px] font-bold text-slate-800 uppercase tracking-widest mb-1">Ejemplo 1 Diagnostico $80.000</p>
@@ -226,4 +226,5 @@
     </script>
 </body>
 </html>
+
 
